--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <h1>Fetch II</h1>
+    <h1>Weather Infromation</h1>
     <input type="text" id="city" placeholder="Enter city name">
     <button onclick="getWeather()">Submit</button>
     <div id="container"></div>
