--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     height: 500px;
                     width: 600px;
                 }
-            </style><a href="https://www.embedgooglemap.net">how to add a map to wordpress</a>
+            </style><a href="https://www.embedgooglemap.net"></a>
             <style>
                 .gmap_canvas {
                     overflow: hidden;
